--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,11 +21,13 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update #create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: true
-      
+    properties:
+      hibernate:
+        format_sql: true
+
   servlet:
     multipart:
       enabled: true
@@ -34,7 +36,10 @@ spring:
   security:
     user:
       name: test
-      password: 1234   
+      password: 1234
 
+logging:
+  level:
+    org.hibernate.SQL: debug
 #file:
 #  path: C:/workspace/springbootwork/upload/
