--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
+application.yml
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,5 +32,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-src/main/resources/application.yml
